--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 <html>
   <head>
     <title>FC Barcelona</title>
-    <meta charset=''utf-8''
+    <meta charset=''utf-8''>
+  </head>
+  <body>
+    <h1>Geschiedenis</h1>
+    
