--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>FC Barcelona</h1>
-    <p>FC Barcelona is een voetbalclub uit Barcelona. Barcelona ligt in de provincie Catalonië, dat ligt in Spanje. De clubkleuren van FC Barcelona zijn paars (of granaatrood) en blauw (of blauwgrana). Het stadion van FC Barcelona is Camp Nou. De aardsriviaal van FC Barcelona is Real Madrid. De wedstrijden tussen FC Barcelona en Real Madrid noemen ze ook wel El Clásico. Nog een riviaal is RCD Espanyol. De wedstrijden tussen 'Barça en RCD Espanyol staan bekend als Derbi de Barcelona.</p>
+    <p>FC Barcelona is een voetbalclub uit Barcelona. Barcelona ligt in de provincie Catalonië, dat ligt in Spanje. De clubkleuren van FC Barcelona zijn paars (of granaatrood) en blauw (of blauwgrana). Het stadion van FC Barcelona is Camp Nou. De aardsriviaal van FC Barcelona is Real Madrid. De wedstrijden tussen FC Barcelona en Real Madrid noemen ze ook wel El Clásico. Nog een riviaal is RCD Espanyol. De wedstrijden tussen 'Barça en RCD Espanyol staan bekend als 'Derbi de Barcelona'.</p>
 
 
     
