--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>FC Barcelona</h1>
     <p>FC Barcelona is een voetbalclub uit Barcelona. Barcelona ligt in de provincie Catalonië, dat ligt in Spanje. De clubkleuren van FC Barcelona zijn paars (of granaatrood) en blauw (of blauwgrana). Het stadion van FC Barcelona is Camp Nou. De aardsriviaal van FC Barcelona is Real Madrid. De wedstrijden tussen FC Barcelona en Real Madrid noemen ze ook wel El Clásico. Nog een rivaal is RCD Espanyol. De wedstrijden tussen Barça en RCD Espanyol staan bekend als 'Derbi de Barcelona'.</p>
-<img src=''pic/Logo FCB.jpg'' alt=''Het logo van FC Barcelona''>
+<img src="https://pcc137227.github.io/Logo FCB.jpg" alt="Het logo van FC Barcelona">
 
     
