--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <img src="https://pcc137227.github.io/FCB.jpg" alt="Het logo van FC Barcelona">
     <h2>Geschiedenis</h2>
     <p>FC Barcelona is opgericht in het jaar 1899, door de Zwitser Johan Joan Gamper. Tijdens de eerste jaren van FC Barcelona speelden er vooral landgenoten van Gamper en veel Britten. Begin jaren 20 (20ste eeuw) had FC Barcelona de eerste successen en won diverse prijzen. Ricardo Zamora, Joseph Samitier en Paulino Alcántara waren in die tijd grote sterren. Franco veranderde FC Barcelona zelf in het Spaanse Club Futbol de Barcelona. FC Barcelona is de eerste club die alle 6 clubelftal bekers in 1 jaar won. Het won in 2009 de Champions league en FC Barcelona won nog meer, namelijk het landskampioenschap, de Spaanse beker, de Europese Supercup, de Spaanse Supercup en het Wereldkampioenschap voetbal voor clubs onder leiding van Pep Guardiola.</p>
-    <h3>Bron:</h3>
+    <h3>Bronnen:</h3>
     <a href="https://wikikids.nl/FC_Barcelona">Wikikids FC Barcelona</a>
