--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
       <tr>
         <td>UEFA Champions League</td>
         <td>5x</td>
+      </tr>
+    </table>
     <h3>Bronnen:</h3>
     <a href="https://wikikids.nl/FC_Barcelona">Wikikids FC Barcelona</a>
