--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <p>Lionel Andrés Messi Cuccittini (24 juni 1987, Rosario) is een Argentijnse profvoetballer. Hij komt per 2001 voor de Spaanse grootmacht FC Barcelona. Hij kwam ook sinds 2005 uit voor het Argentijnse voetbalelftal, in 2016 heeft hij na een nederlaag tegen Chili in de finale van Copa América besloten om te stoppen. Hij komt uit de jeugdopleiding van FC Barcelona. Hij wordt door vele beschouwd als de beste voetballer ter wereld. Hij begon bij Grandoli en toen werd hij gescout door Newell's Old Boys.</p>
     <a href="https://wikikids.nl/Lionel_Messi"><img src="https://pcc137227.github.io/Messi.jpg" width="400" height="250"></a>
     <h2>De Bekers van FC Barcelona</h2>
-    <table border="1" style="width:50%">
+    <table border="1" style="width:25%">
       <tr>
-        <td>Competitie</td>
+        <td><h6>Competitie</h6></td>
         <td>Aantal</td>
       </tr>
       <tr>
-        <td>UEFA Champions League</td>
+        <td><h6>UEFA Champions League</h6></td>
         <td>5x</td>
       </tr>
     </table>
