--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <table border="1" style="width:25%">
       <tr>
         <td><h6>Competitie</h6></td>
-        <td>Aantal</td>
+        <td><h6>Aantal</h6></td>
       </tr>
       <tr>
-        <td><h6>UEFA Champions League</h6></td>
+        <td>UEFA Champions League</td>
         <td>5x</td>
       </tr>
     </table>
