--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <td>UEFA Champions League</td>
         <td>5x</td>
       </tr>
+      <tr>
+        <td>Spaans landskampioenschap</td>
+        <td>26x</td>
+      </tr>
+      <tr>
+        <td>Copa del Rey</td>
+        <td>30x</td>
+      </tr>
     </table>
     <h3>Bronnen:</h3>
     <a href="https://wikikids.nl/FC_Barcelona">Wikikids FC Barcelona</a>
