--- a/index.html
+++ b/index.html
@@ -32,5 +32,28 @@
         <td>30x</td>
       </tr>
     </table>
+    <h2>Selectie 2019/2020</h2>
+    <ul>
+      <li>Marc-André ter Stegen</li>
+      <li>Neto</li>
+      <li>Clément Lenglet</li>
+      <li>Samuel Umtiti</li>
+      <li>Gerard Piqué</li>
+      <li>Jordi Alba</li>
+      <li>Júnior Firpo</li>
+      <li>Nélson Semedo</li>
+      <li>Sergio Busquets</li>
+      <li>Frenkie de Jong</li>
+      <li>Arthur</li>
+      <li>Sergi Roberto</li>
+      <li>Ivan Rakitic</li>
+      <li>Arturo Vidal</li>
+      <li>Ousmane Dembélé</li>
+      <li>Ansu Fati</li>
+      <li>Arda Turan</li>
+      <li>Lionel Messi</li>
+      <li>Antoine Griezmann</li>
+      <li>Luis Suárez</li>
+    </ul>
     <h3>Bronnen:</h3>
     <a href="https://wikikids.nl/FC_Barcelona">Wikikids FC Barcelona</a>
