--- a/index.html
+++ b/index.html
@@ -57,3 +57,6 @@
     </ul>
     <h3>Bronnen:</h3>
     <a href="https://wikikids.nl/FC_Barcelona">Wikikids FC Barcelona</a>
+    <a href="https://wikikids.nl/Lionel_Messi">Wikikids Lionel Messi</a>
+    <a href="https://www.transfermarkt.nl/fc-barcelona/kader/verein/131">Transfermarkt Selectie 2019/2020</a>
+    
