--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>FC Barcelona</title>
+    <meta name="discription" content="Ins en Outs over FC Barcelona">
+    <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Gescheidenis, Selectie">
+    <meta name="robots" content="index,follow">
+    <meta name="revisit-after" content="1 day">
+    <meta name="author" content="Ridouane Ouacha en Caner Tepe">
+    <meta name="reply to" content="137227@edu.pcc.nu">
     <meta charset="utf-8">
   </head>
   <body>
