--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <li>Júnior Firpo</li>
       <li>Nélson Semedo</li>
       <li>Sergio Busquets</li>
-      <li>Frenkie de Jong</li>
+      <li><a href="">Frenkie de Jong</a></li>
       <li>Arthur</li>
       <li>Sergi Roberto</li>
       <li>Ivan Rakitic</li>
