--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body  {background-color:blue;}
+      h1    {color:red;}
+      h2    {color:red;}
+      p     {color:red;}
+      title {color:red;}
+      li    {color:red;}
+      h3    {color:red;}
+      tr    {color:red;}
+      td    {color:red;}
+    </style>
     <title>FC Barcelona</title>
     <meta name="discription" content="Ins en Outs over FC Barcelona">
     <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Gescheidenis, Selectie">
