--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style>
-      body  {background-color:blue;}
+      body  {background-color:white;}
       h1    {color:red;}
       h2    {color:red;}
       p     {color:red;}
@@ -11,6 +11,7 @@
       h3    {color:red;}
       tr    {color:red;}
       td    {color:red;}
+      a     {color:red;}
     </style>
     <title>FC Barcelona</title>
     <meta name="discription" content="Ins en Outs over FC Barcelona">
