--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <style>
       body  {background-color:white;}
-      h1    {color:red;}
-      h2    {color:red;}
+      h1    {color:blue;}
+      h2    {color:blue;}
       p     {color:red;}
-      title {color:red;}
+      title {color:blue;}
       li    {color:red;}
-      h3    {color:red;}
+      h3    {color:blue;}
       tr    {color:red;}
       td    {color:red;}
       a     {color:red;}
