--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
     <title>FC Barcelona</title>
     <meta name="discription" content="Ins en Outs over FC Barcelona">
-    <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Gescheidenis, Selectie">
+    <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Geschiedenis, Selectie">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Ridouane Ouacha en Caner Tepe">
