--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       a     {color:red;}
     </style>
     <title>FC Barcelona</title>
-    <meta name="discription" content="Ins en Outs over FC Barcelona">
+    <meta name="description" content="Ins en Outs over FC Barcelona">
     <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Geschiedenis, Selectie">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="1 day">
