--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Geschiedenis, Selectie">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="1 day">
+    <meta http-equiv="language" content="NL">
     <meta name="author" content="Ridouane Ouacha en Caner Tepe">
     <meta name="reply to" content="137227@edu.pcc.nu">
     <meta charset="utf-8">
