--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
   <head>
     <style>
       body  {background-color:white;}
@@ -18,7 +18,6 @@
     <meta name="keywords" content="FCB, Barcelona, FC Barcelona, Ins, Outs, Geschiedenis, Selectie">
     <meta name="robots" content="index,follow">
     <meta name="revisit-after" content="1 day">
-    <meta http-equiv="language" content="NL">
     <meta name="author" content="Ridouane Ouacha en Caner Tepe">
     <meta name="reply to" content="137227@edu.pcc.nu">
     <meta charset="utf-8">
@@ -31,7 +30,7 @@
     <p>FC Barcelona is opgericht in het jaar 1899, door de Zwitser <a href="https://pcc137227.github.io/Johan.html">Johan Joan Gamper</a>. Tijdens de eerste jaren van FC Barcelona speelden er vooral landgenoten van Gamper en veel Britten. Begin jaren 20 (20ste eeuw) had FC Barcelona de eerste successen en won diverse prijzen. Ricardo Zamora, Joseph Samitier en Paulino Alcántara waren in die tijd grote sterren. Franco veranderde FC Barcelona zelf in het Spaanse Club Futbol de Barcelona. FC Barcelona is de eerste club die alle 6 clubelftal bekers in 1 jaar won. Het won in 2009 de Champions league en FC Barcelona won nog meer, namelijk het landskampioenschap, de Spaanse beker, de Europese Supercup, de Spaanse Supercup en het Wereldkampioenschap voetbal voor clubs onder leiding van Pep Guardiola.</p>
     <h2>Lionel Messi</h2>
     <p>Lionel Andrés Messi Cuccittini (24 juni 1987, Rosario) is een Argentijnse profvoetballer. Hij komt per 2001 voor de Spaanse grootmacht FC Barcelona. Hij kwam ook sinds 2005 uit voor het Argentijnse voetbalelftal, in 2016 heeft hij na een nederlaag tegen Chili in de finale van Copa América besloten om te stoppen. Hij komt uit de jeugdopleiding van FC Barcelona. Hij wordt door vele beschouwd als de beste voetballer ter wereld. Hij begon bij Grandoli en toen werd hij gescout door Newell's Old Boys.</p>
-    <a href="https://wikikids.nl/Lionel_Messi"><img src="https://pcc137227.github.io/Messi.jpg" width="400" height="250"></a>
+    <a href="https://wikikids.nl/Lionel_Messi"><img src="https://pcc137227.github.io/Messi.jpg" alt="Messi" width="400" height="250"></a>
     <h2>De Bekers van FC Barcelona</h2>
     <table border="1" style="width:40%">
       <tr>
